force-app/main/default/objects/TIMBASURVEYS__Question_Summary__c/fields/TIMBASURVEYS__Position__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Position__c</fullName>
    <label>Position</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>