force-app/main/default/objects/TIMBASURVEYS__Question_Summary__c/fields/TIMBASURVEYS__Question2__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Question2__c</fullName>
    <label>Sub Question</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>