force-app/main/default/objects/TIMBASURVEYS__Question_Summary__c/fields/TIMBASURVEYS__Survey_Summary__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Survey_Summary__c</fullName>
    <label>Survey Summary</label>
    <referenceTo>TIMBASURVEYS__Survey_Summary__c</referenceTo>
    <relationshipLabel>Question Summaries</relationshipLabel>
    <relationshipName>Question_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>