force-app/main/default/objects/TIMBASURVEYS__Question_Summary__c/fields/TIMBASURVEYS__weight__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__weight__c</fullName>
    <label>weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>